# rustys-mini-golf

./: .gitignore  Cargo.toml  LICENSE  README.md  Start-Server.ps1  index.html
Assets/Affinity/: SocialMediaIcons.afphoto  SocialMediaIcons.afphoto~lock~  SpeechBubbles.afdesign
Assets/Aseprite/: Ball.aseprite  Cactus.aseprite  Cursor.aseprite  DesertSmallProps.aseprite  Flag.aseprite  LevelSelectBackground.aseprite  LevelSelectIsland.aseprite  LevelSelectLine.aseprite  LevelSelectMapsAllInOne.aseprite  LevelSelectStart.aseprite  MapSelectBackground.aseprite  MapSelectLines.aseprite  MapSelectMaps.aseprite  MapSelectStar.aseprite  Moving Block.aseprite  SmalButtons.aseprite  SpaceBG.aseprite  Tileset.aseprite  Windmill.aseprite  WindmillBlade.aseprite  WindmillBlades.aseprite  ZoomButtons.aseprite
Assets/Audacity/: RMG SFX.aup3-shm  RMG SFX.aup3-wal
Assets/FL/: RMG SFX.flp  Rusty's Mini Golf Gameplay Theme.flp  Rusty's Mini Golf Main Menu Theme.flp
Assets/Maps/: Course-01.tmx  Map-01.tmx  Map-02.tmx  Map-03.tmx  Map-04.tmx  Map-05.tmx  Map-06.tmx  Map-07.tmx  Map-08.tmx  Map-09.tmx  Map-10.tmx  Map-11.tmx  Map-12.tmx  Map-13.tmx  Map-14.tmx  Map-15.tmx  Map-16.tmx  Map-17.tmx  Map-18.tmx  Template.tmx
Export/: Start-Server.ps1
Src/: icon.svg.import  project.godot
Src/Cursor/: Cursor.png.import  CursorArrow.png.import  CursorBeam.png.import  CustomCursor.gd  CustomCursor.tscn
Src/MainMenu/: Mai646A.tmp  (+6 more)
src/: animated_sprite.rs  background.rs  ball.rs  constants.rs  game.rs  html.rs  level.rs  lib.rs  point.rs  sprite_sheet.rs
web/: index.html  style.css
(+191 files in other folders)
