[package]
name = "rustys-mini-golf"
version = "0.1.0"
authors = ["Sleeping Colossus"]
description = "Mini golf puzzle game"
repository = "https://github.com/SleepingColossus/rustys-mini-golf"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3.61"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
