[package]
name = "rustys-mini-golf"
version = "0.1.0"
authors = ["Sleeping Colossus"]
description = "Mini golf puzzle game"
repository = "https://github.com/SleepingColossus/rustys-mini-golf"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2.8", features = ["js"] }
js-sys = "0.3.61"
rand = "0.8.5"
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3.61"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'Window',
]
